<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="ar.com.adiego73.game.GameActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/ingrese_numero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <include
        android:id="@+id/btnProbar" 
        layout="@layout/go_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numbersContainer"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        />
    
    <include
        android:id="@+id/btnReiniciar" 
        layout="@layout/reset_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnProbar"
        android:layout_alignBottom="@+id/btnProbar"
        android:layout_alignRight="@+id/numbersContainer"
        />

    <LinearLayout
        android:id="@+id/numbersContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:gravity="bottom" >

        <EditText
            android:id="@+id/primerNumero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="1" 
			android:digits="1234567890"/>

        <EditText
            android:id="@+id/segundoNumero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="1" 
			android:digits="1234567890"
            android:width="20dp" />

        <EditText
            android:id="@+id/tercerNumero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="1" 
			android:digits="1234567890" />

        <EditText
            android:id="@+id/cuartoNumero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="1" 
			android:digits="1234567890" />
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnProbar"
        android:layout_alignLeft="@+id/btnProbar"
        android:layout_alignRight="@+id/btnReiniciar"
        android:layout_below="@+id/numbersContainer"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:id="@+id/txtAttemptHeaderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_attempts_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtAttemptHeaderHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_attempts_help"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtAttemptHeaderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_attempts_number"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <ListView
            android:id="@+id/listAttempts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp" >
        </ListView>
    </TableLayout>

</RelativeLayout>